--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="main-content">
     <div class="left-image">
-      <img src="" alt="Image"> <!-- Try using an absolute path -->
+      <img src="https://5minuteenglish.com/wp-content/uploads/2024/04/students-in-a-classroom-taking-a-test.webp" alt="Image" width="510"> <!-- Try using an absolute path -->
     </div>
     <div class="right-text">
       <h1>Online Exam Portal</h1>
