Login page  Updated

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,53 @@
-<div class="login-container">
-  <h2>Login to Exam Portal</h2>
-  <form (ngSubmit)="onLogin()">
-    <input type="email" [(ngModel)]="loginData.email" name="email" placeholder="Email" required />
-    <input type="password" [(ngModel)]="loginData.password" name="password" placeholder="Password" required />
-    <button type="submit">Login</button>
-  </form>
-</div>
+<section class="vh-100">
+  <div class="container-fluid h-custom">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="main-content">
+        <div class="left-image">
+          <div class="col-md-9 col-lg-6 col-xl-5">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" width="550"
+              class="img-fluid" alt="Sample image">
+          </div>
+        </div>
+        <div class="right-text">
+          <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+            <form (ngSubmit)="onLogin()">
+              <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+                <p class="lead fw-normal mb-0 me-3">Login to Exam Portal</p>
+              </div>
+
+              <!-- Email input -->
+              <div class="form-outline mb-4">
+                <input type="email" id="login-email" class="form-control form-control-lg"
+                  [(ngModel)]="loginData.email" name="email" placeholder="Enter your email" required />
+                <label class="form-label" for="login-email">Email address</label>
+              </div>
+
+              <!-- Password input -->
+              <div class="form-outline mb-3">
+                <input type="password" id="login-password" class="form-control form-control-lg"
+                  [(ngModel)]="loginData.password" name="password" placeholder="Enter password" required />
+                <label class="form-label" for="login-password">Password</label>
+              </div>
+
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="form-check mb-0">
+                  <input class="form-check-input me-2" type="checkbox" id="remember-me" />
+                  <label class="form-check-label" for="remember-me">
+                    Remember me
+                  </label>
+                </div>
+              </div>
+
+              <div class="text-center text-lg-start mt-4 pt-2">
+                <button type="submit" class="btn btn-primary btn-lg">Login</button>
+                <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? 
+                  <a routerLink="/signup" class="link-danger">Register</a>
+                </p>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
