--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,16 +1,58 @@
-<div class="signup-container">
-  <h2>Sign Up for Exam Portal</h2>
-  <form (ngSubmit)="onSignup()">
-    <input type="text" [(ngModel)]="user.name" name="name" placeholder="Name" required />
-    <input type="email" [(ngModel)]="user.email" name="email" placeholder="Email" required />
-    <input type="password" [(ngModel)]="user.password" name="password" placeholder="Password" required />
-    <button type="submit">Sign Up</button>
-  </form>
-  
-  <div class="login-prompt" *ngIf="signupSuccess">
-    <p>Signup successful! Please proceed to login.</p>
-    <a routerLink="/login">
-      <button class="login-btn">Login</button>
-    </a>
+<section class="vh-100">
+  <div class="container-fluid h-custom">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="main-content">
+        
+        <!-- Toggle switch inside main content -->
+        <div class="toggle-container">
+          <div class="toggle">
+            <span [class.active]="!isLogin" (click)="switchToSignup()">Sign Up</span>
+            <span [class.active]="isLogin" (click)="switchToLogin()">Login</span>
+            <div class="slider" [class.moveRight]="isLogin"></div>
+          </div>
+        </div>
+
+        <div class="left-image">
+          <div class="col-md-9 col-lg-6 col-xl-5">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" width="450"
+              class="img-fluid" alt="Sample image">
+          </div>
+        </div>
+        <div class="right-text">
+          <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+            <form (ngSubmit)="onSignup()">
+              <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+                <p class="lead fw-normal mb-0 me-3">Sign Up for Exam Portal</p>
+              </div>
+
+              <!-- Name input -->
+              <div class="form-outline mb-4">
+                <input type="text" id="signup-name" class="form-control form-control-lg"
+                  [(ngModel)]="user.name" name="name" placeholder="Enter your name" required />
+                <label class="form-label" for="signup-name">Name</label>
+              </div>
+
+              <!-- Email input -->
+              <div class="form-outline mb-4">
+                <input type="email" id="signup-email" class="form-control form-control-lg"
+                  [(ngModel)]="user.email" name="email" placeholder="Enter your email" required />
+                <label class="form-label" for="signup-email">Email address</label>
+              </div>
+
+              <!-- Password input -->
+              <div class="form-outline mb-3">
+                <input type="password" id="signup-password" class="form-control form-control-lg"
+                  [(ngModel)]="user.password" name="password" placeholder="Enter password" required />
+                <label class="form-label" for="signup-password">Password</label>
+              </div>
+
+              <div class="text-center text-lg-start mt-4 pt-2">
+                <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+</section>
