--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,6 +10,7 @@
   <div class="main-content">
     <div class="left-image">
       <img src="https://5minuteenglish.com/wp-content/uploads/2024/04/students-in-a-classroom-taking-a-test.webp" alt="Image" width="510">
+      
     </div>
     <div class="right-text">
         <h1>Online Exam Portal</h1>
@@ -55,7 +56,7 @@
     <footer>
       <div class="footer-content">
           <div class="footer-section">
-              <img src="logo-url-here" alt="TopRanker Logo">
+              <img src="C:\Users\2403590\OneDrive - Cognizant\Desktop\Project frontend\Angular-FrontEnd\src\app\images\HomePage Logo.png" alt="TopRanker Logo">
               <p>Top Ranker is democratizing education, making it accessible to all.<br>Join the revolution, learn on India's largest learning platform.</p>
               <a href="#"><img src="google-play-button-url-here" alt="Google Play Button"></a>
           </div>
